# apps/web/src/api/openapi.json
@@ -162,6 +162,53 @@
         }
       }
     },
+    "/api/v1/schools/search": {
+      "get": {
+        "tags": [
+          "tasks",
+          "schools"
+        ],
+        "summary": "Search Schools By Name",
+        "operationId": "search_schools_by_name_api_v1_schools_search_get",
+        "parameters": [
+          {
+            "name": "name",
+            "in": "query",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "minLength": 3,
+              "title": "Name"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successful Response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/SchoolNameSearchResponse"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Invalid name search parameter."
+          },
+          "422": {
+            "description": "Validation Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/HTTPValidationError"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/v1/schools/{urn}": {
       "get": {
         "tags": [
@@ -275,6 +322,27 @@
         },
         "type": "object",
         "title": "HTTPValidationError"
+      },
+      "SchoolNameSearchResponse": {
+        "properties": {
+          "count": {
+            "type": "integer",
+            "title": "Count"
+          },
+          "schools": {
+            "items": {
+              "$ref": "#/components/schemas/SchoolSearchItemResponse"
+            },
+            "type": "array",
+            "title": "Schools"
+          }
+        },
+        "type": "object",
+        "required": [
+          "count",
+          "schools"
+        ],
+        "title": "SchoolNameSearchResponse"
       },
       "SchoolProfileAreaContextCoverageResponse": {
         "properties": {
